--- a/RxStudy/RxStudy/Features/Shop/Shop.storyboard
+++ b/RxStudy/RxStudy/Features/Shop/Shop.storyboard
@@ -79,108 +79,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfi-TR-jaD">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MCL-nK-w6C">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1650"/>
-                                        <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yfG-OQ-V4n">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="337"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubz-Uq-Z47">
-                                                <rect key="frame" x="0.0" y="337" width="414" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="YaL-9o-UX9"/>
-                                                </constraints>
-                                            </view>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hgt-L9-7fK">
-                                                <rect key="frame" x="0.0" y="387" width="414" height="1263"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="5" id="85R-wY-wev">
-                                                    <size key="itemSize" width="228" height="353"/>
-                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
-                                                </collectionViewFlowLayout>
-                                                <cells>
-                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopDetailCell" id="XtF-mA-srD" customClass="ShopDetailCell" customModule="RxStudy" customModuleProvider="target">
-                                                        <rect key="frame" x="93" y="0.0" width="228" height="353"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MHz-IR-7rd">
-                                                            <rect key="frame" x="0.0" y="0.0" width="228" height="353"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-ba-8mg">
-                                                                    <rect key="frame" x="10" y="10" width="0.0" height="0.0"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0K-xd-UdV">
-                                                                    <rect key="frame" x="10" y="25" width="20.5" height="18"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                    <state key="normal" image="suit.heart" catalog="system">
-                                                                        <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                                    </state>
-                                                                </button>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="W0K-xd-UdV" firstAttribute="leading" secondItem="ktU-ba-8mg" secondAttribute="leading" id="6my-qw-FRg"/>
-                                                                <constraint firstItem="W0K-xd-UdV" firstAttribute="top" secondItem="ktU-ba-8mg" secondAttribute="bottom" constant="15" id="8a2-zR-Y6N"/>
-                                                                <constraint firstItem="ktU-ba-8mg" firstAttribute="leading" secondItem="MHz-IR-7rd" secondAttribute="leading" constant="10" id="Q8c-g2-x7d"/>
-                                                                <constraint firstItem="ktU-ba-8mg" firstAttribute="top" secondItem="MHz-IR-7rd" secondAttribute="top" constant="10" id="ya2-gM-SkV"/>
-                                                            </constraints>
-                                                        </collectionViewCellContentView>
-                                                        <size key="customSize" width="228" height="353"/>
-                                                        <connections>
-                                                            <outlet property="likeBtn" destination="W0K-xd-UdV" id="Wte-Cl-kra"/>
-                                                            <outlet property="titleLabel" destination="ktU-ba-8mg" id="I5N-2U-LZS"/>
-                                                        </connections>
-                                                    </collectionViewCell>
-                                                </cells>
-                                                <connections>
-                                                    <outlet property="delegate" destination="V5d-cL-hru" id="DtU-cU-t7x"/>
-                                                </connections>
-                                            </collectionView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="yfG-OQ-V4n" firstAttribute="width" secondItem="MCL-nK-w6C" secondAttribute="width" id="L9b-B2-sZi"/>
-                                        </constraints>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="MCL-nK-w6C" secondAttribute="bottom" id="2ZF-EN-Cgh"/>
-                                    <constraint firstAttribute="trailing" secondItem="MCL-nK-w6C" secondAttribute="trailing" id="AP4-0X-FXN"/>
-                                    <constraint firstItem="MCL-nK-w6C" firstAttribute="leading" secondItem="Cfi-TR-jaD" secondAttribute="leading" id="L47-9c-lsf"/>
-                                    <constraint firstItem="MCL-nK-w6C" firstAttribute="top" secondItem="Cfi-TR-jaD" secondAttribute="top" id="Rss-PG-kZD"/>
-                                    <constraint firstItem="MCL-nK-w6C" firstAttribute="centerX" secondItem="Cfi-TR-jaD" secondAttribute="centerX" id="eSK-LW-3sc"/>
-                                </constraints>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Hgt-L9-7fK">
+                                <rect key="frame" x="0.0" y="-211" width="414" height="1263"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="5" id="85R-wY-wev">
+                                    <size key="itemSize" width="228" height="353"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ShopDetailCell" id="XtF-mA-srD" customClass="ShopDetailCell" customModule="RxStudy" customModuleProvider="target">
+                                        <rect key="frame" x="93" y="0.0" width="228" height="353"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MHz-IR-7rd">
+                                            <rect key="frame" x="0.0" y="0.0" width="228" height="353"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-ba-8mg">
+                                                    <rect key="frame" x="10" y="10" width="0.0" height="0.0"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0K-xd-UdV">
+                                                    <rect key="frame" x="10" y="25" width="20.5" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <state key="normal" image="suit.heart" catalog="system">
+                                                        <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="W0K-xd-UdV" firstAttribute="leading" secondItem="ktU-ba-8mg" secondAttribute="leading" id="6my-qw-FRg"/>
+                                                <constraint firstItem="W0K-xd-UdV" firstAttribute="top" secondItem="ktU-ba-8mg" secondAttribute="bottom" constant="15" id="8a2-zR-Y6N"/>
+                                                <constraint firstItem="ktU-ba-8mg" firstAttribute="leading" secondItem="MHz-IR-7rd" secondAttribute="leading" constant="10" id="Q8c-g2-x7d"/>
+                                                <constraint firstItem="ktU-ba-8mg" firstAttribute="top" secondItem="MHz-IR-7rd" secondAttribute="top" constant="10" id="ya2-gM-SkV"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="228" height="353"/>
+                                        <connections>
+                                            <outlet property="likeBtn" destination="W0K-xd-UdV" id="Wte-Cl-kra"/>
+                                            <outlet property="titleLabel" destination="ktU-ba-8mg" id="I5N-2U-LZS"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <outlet property="delegate" destination="V5d-cL-hru" id="NWd-7r-ja5"/>
+                                    <outlet property="delegate" destination="V5d-cL-hru" id="DtU-cU-t7x"/>
                                 </connections>
-                            </scrollView>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="Cfi-TR-jaD" firstAttribute="leading" secondItem="uKx-6F-cqw" secondAttribute="leading" id="7uH-Kz-Lvc"/>
-                            <constraint firstItem="Cfi-TR-jaD" firstAttribute="bottom" secondItem="uKx-6F-cqw" secondAttribute="bottom" id="DLd-Ja-hCJ"/>
-                            <constraint firstItem="Hgt-L9-7fK" firstAttribute="height" secondItem="kY0-lc-Bx7" secondAttribute="height" multiplier="1.5" id="Ef3-3b-eV4"/>
-                            <constraint firstItem="Cfi-TR-jaD" firstAttribute="width" secondItem="kY0-lc-Bx7" secondAttribute="width" id="IS2-j8-4G2"/>
-                            <constraint firstItem="yfG-OQ-V4n" firstAttribute="height" secondItem="kY0-lc-Bx7" secondAttribute="height" multiplier="0.4" id="LOu-ja-iVv"/>
-                            <constraint firstItem="Cfi-TR-jaD" firstAttribute="top" secondItem="uKx-6F-cqw" secondAttribute="top" id="jYm-Xe-PDb"/>
-                            <constraint firstItem="Cfi-TR-jaD" firstAttribute="trailing" secondItem="uKx-6F-cqw" secondAttribute="trailing" id="qZo-c9-dsy"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="uKx-6F-cqw"/>
                     </view>
                     <navigationItem key="navigationItem" id="Mbu-dl-SUG"/>
                     <connections>
-                        <outlet property="collectionView" destination="Hgt-L9-7fK" id="A5V-hs-oBT"/>
-                        <outlet property="headerInfoView" destination="yfG-OQ-V4n" id="1Ir-zY-gWu"/>
-                        <outlet property="verticalCollectionHeaderTabView" destination="ubz-Uq-Z47" id="KYd-Da-Ygy"/>
-                        <outlet property="verticalCollectionView" destination="Hgt-L9-7fK" id="o9k-zZ-e7c"/>
                         <segue destination="VIY-DJ-gzc" kind="show" identifier="shopDetailWebPage" id="iSs-8f-75Z"/>
                     </connections>
                 </viewController>
